--- a/TodoManonPoulain/app/src/main/AndroidManifest.xml
+++ b/TodoManonPoulain/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".detail.DetailActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_detail"
             android:theme="@style/Theme.TodoManonPoulain" />
         <activity
