--- a/TodoManonPoulain/app/src/main/AndroidManifest.xml
+++ b/TodoManonPoulain/app/src/main/AndroidManifest.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,13 +24,29 @@
         android:theme="@style/Theme.TodoManonPoulain"
         tools:targetApi="31">
         <activity
+            android:name=".user.UserActivity"
+            android:banner="@drawable/app_icon_your_company"
+            android:exported="false"
+            android:icon="@drawable/app_icon_your_company"
+            android:label="@string/title_activity_user"
+            android:logo="@drawable/app_icon_your_company"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".detail.DetailActivity"
             android:exported="true"
             android:label="@string/title_activity_detail"
-            android:theme="@style/Theme.TodoManonPoulain" >
+            android:theme="@style/Theme.TodoManonPoulain">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
