--- a/TodoManonPoulain/app/src/main/AndroidManifest.xml
+++ b/TodoManonPoulain/app/src/main/AndroidManifest.xml
@@ -22,14 +22,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoManonPoulain"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:banner="@style/Theme.TodoManonPoulain">
         <activity
             android:name=".user.UserActivity"
-            android:banner="@drawable/app_icon_your_company"
             android:exported="false"
-            android:icon="@drawable/app_icon_your_company"
             android:label="@string/title_activity_user"
-            android:logo="@drawable/app_icon_your_company"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
