--- a/TodoManonPoulain/app/src/main/AndroidManifest.xml
+++ b/TodoManonPoulain/app/src/main/AndroidManifest.xml
@@ -4,12 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
-    <uses-feature
-        android:name="android.software.leanback"
-        android:required="true" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -27,13 +21,7 @@
         <activity
             android:name=".user.UserActivity"
             android:exported="false"
-            android:label="@string/title_activity_user"
-            android:screenOrientation="landscape">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
+            android:label="@string/title_activity_user">
         </activity>
         <activity
             android:name=".detail.DetailActivity"
